# stocks-model

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
data/: universe_sample.txt
docs/: architecture.md
src/squeeze_scanner/: __init__.py  cli.py  client.py  config.py  crash_scorer.py  dominant.py  metrics.py  moonshot_scorer.py  scanner.py  scoring.py  screener.py
tests/: conftest.py  test_crash_scorer.py  test_dominant.py  test_moonshot_scorer.py  test_scoring.py  test_screener.py
