[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squeeze-scanner"
version = "0.1.0"
description = "Short-squeeze candidate scanner using Fuel/Pressure/Ignition scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
squeeze = "squeeze_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
